--- a/html/index.html
+++ b/html/index.html
@@ -23,14 +23,20 @@
     </header>
 
     <!--=======Home section=======-->
-    <section class="home flex-center" id="home">
-      <div class="home">
-        <div class="home-container">
-          <h1>Ready To Read?</h1>
-          <h2>Busca algun libro...</h2>
-          <input type="text" class="search" />
-          <button class="btn">Buscar</button>
+    <section class="banner flex-center" id="banner">
+      <div class="banner">
+        <div class="banner-container">
+          <h1 class="section-title-01">Ready To Read?</h1>
+          <div class="banner-img">
+            <img src="../resources/home/home-banner.jpg" alt="" />
+          </div>
         </div>
+      </div>
+
+      <div class="home">
+        <h2>Busca algun libro...</h2>
+        <input type="text" class="search" />
+        <button class="btn">Buscar</button>
       </div>
     </section>
 
